--- a/forms.css
+++ b/forms.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap');
 
 .crouch {
-    width: 2055px;
+    width: 2000px;
     height: 30px;
     border: solid;
     border-color: rgb(69, 74, 74);
@@ -26,13 +26,6 @@
     margin: auto;
 }
 
-.anexe {
-    position: absolute;
-    width: 285px;
-    height: 234px;
-    left: calc(50% - 285px/2 - 71.5px);
-
-}
 
 .que {
     height: 80vh;
@@ -42,7 +35,7 @@
     justify-content: center;
     text-align: center;
     color: rgb(2, 18, 33);
-    background-size: 150%;
+    background-size: 100%;
     background-repeat: no-repeat;
 }
 
@@ -107,4 +100,9 @@
     font-weight: bold;
     text-shadow: 2px 2px 5px black; 
 }
+.des{
+    background-color: rgb(128, 134, 145);
+    padding: auto;
+}
+
 
